# invoice-cli

./: .gitignore  Cargo.toml  Invoice19_20241023.html  Invoice1_20240527.html  Invoice4_20240516.html  README.md  example.json  rustfmt.toml  test.html  test.json
src/: lib.rs  main.rs
src/cli/: config.rs  contact.rs  create.rs  delete.rs  econf.rs  edit.rs  generate.rs  list.rs  mod.rs
src/commands/: generate.rs  json_input.rs  mod.rs  paths.rs  selectors.rs  send_mail.rs
src/db/: cached.rs  getters.rs  initdb.rs  migrate.rs  mod.rs  prepare.rs  transactions.rs
src/db/prepare/: mod.rs
src/db/prepare/fields/: create.rs  edit.rs
src/db/prepare/prep/: create.rs  delete.rs  edit.rs  mod.rs
src/db/prepare/tables/: create.rs  delete.rs  edit.rs  mod.rs
src/db/prepare/values/: create.rs  edit.rs
src/models/: client.rs  company.rs  config.rs  contact.rs  invoice.rs  items.rs  methods.rs  mod.rs  template.rs  terms.rs
src/render/: mod.rs
src/templates/: default.html
src/validators/: create.rs  edit.rs  mod.rs
