[package]
name = "invoice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
struct_iterable = "0.1.1"
