[package]
name = "invoice-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
inquire = { version = "0.7.5", features = ["date"] }
rusqlite = { version = "0.31.0", features = ["bundled", "blob", "chrono"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
struct_iterable = "0.1.1"
tera = "1.19.1"
text_io = "0.1.12"
