[package]
name = "invoice-cli"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
infer = "0.15.0"
inquire = { version = "0.7.5", features = ["date"] }
mime_guess = "2.0.4"
open = "5.1.2"
rusqlite = { version = "0.31.0", features = ["bundled", "blob", "chrono"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
struct_iterable = "0.1.1"
tera = "1.19.1"
text_io = "0.1.12"
